Fix URL for Gruene Milk (#17)

--- a/data/countries/de/nw/data.yaml
+++ b/data/countries/de/nw/data.yaml
@@ -489,7 +489,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-milk.de/
+    url: http://xn--grne-milk-r9a.de/
   - type: FACEBOOK
     url: https://www.facebook.com/GrueneMiLk
 ---
