Fix URL of Untereichsfeld (#23)

--- a/data/countries/de/ni/data.yaml
+++ b/data/countries/de/ni/data.yaml
@@ -560,7 +560,7 @@ district: Göttingen
 city: Untereichsfeld
 urls:
   - type: WEBSITE
-    url: http://www.gruene-untereichsfeld.de
+    url: http://www.gruene-goettingen.de/ortsverbaende/ov-untereichsfeld-duderstadt/
 ---
 type: REGIONAL_CHAPTER
 level: DE:ORTSVERBAND
