Fix URL of Gruene Sickte (#19)

--- a/data/countries/de/ni/data.yaml
+++ b/data/countries/de/ni/data.yaml
@@ -2122,7 +2122,7 @@ district: Wolfenbüttel
 city: Sickte
 urls:
   - type: WEBSITE
-    url: http://www.gruenesickte.de/
+    url: http://gruene-sickte.de/
 ---
 type: REGIONAL_CHAPTER
 level: DE:ORTSVERBAND
