add sociallinks for sl, st, th (4/4)

--- a/data/countries/de/sl/data.yaml
+++ b/data/countries/de/sl/data.yaml
@@ -165,6 +165,8 @@ city: Bous
 urls:
   - type: WEBSITE
     url: http://gruene-bous.de/
+  - type: FACEBOOK
+    url: https://www.facebook.com/gruenebous
 ---
 type: REGIONAL_CHAPTER
 level: DE:ORTSVERBAND
@@ -232,6 +234,8 @@ city: Saarwellingen
 urls:
   - type: WEBSITE
     url: http://gruene-saarwellingen.de/
+  - type: FACEBOOK
+    url: http://www.facebook.com/groups/gruene.saarwellignen/
 ---
 type: REGIONAL_CHAPTER
 level: DE:ORTSVERBAND
@@ -406,6 +410,10 @@ city: Wadern
 urls:
   - type: WEBSITE
     url: http://gruene-wadern.de/
+  - type: FACEBOOK
+    url: https://www.facebook.com/gruenewadern/
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruenewadern/
 ---
 type: REGIONAL_CHAPTER
 level: DE:ORTSVERBAND
