--- a/data/countries/de/bw/data.yaml
+++ b/data/countries/de/bw/data.yaml
@@ -143,7 +143,7 @@ urls:
   - type: WEBSITE
     url: http://www.gruene-ettlingen.de/
   - type: FACEBOOK
-    url: https://www.facebook.com/Grüne-Ettlingen-266223026751766/
+    url: https://www.facebook.com/Gruene.Ettlingen/
 ---
 country: DE
 district: Freiburg
