escape dachau link

--- a/data/countries/de/by/data.yaml
+++ b/data/countries/de/by/data.yaml
@@ -288,7 +288,7 @@ urls:
   - type: WEBSITE
     url: http://www.gruene-dachau.de
   - type: FACEBOOK
-    url: https://www.facebook.com/Bündnis-90-Die-Grünen-KV-Dachau-216344461717040/?ref=hl
+    url: https://www.facebook.com/B%C3%BCndnis-90-Die-Gr%C3%BCnen-KV-Dachau-216344461717040/
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
