consolidate/fix links

--- a/data/countries/de/bb/data.yaml
+++ b/data/countries/de/bb/data.yaml
@@ -37,7 +37,7 @@ urls:
   - type: WEBSITE
     url: http://gruene-kv-brb.de/home/
   - type: FACEBOOK
-    url: https://www.facebook.com/pages/B%C3%BCndnis-90Die-Gr%C3%BCnen-Brandenburg-an-der-Havel/201715346651520
+    url: https://www.facebook.com/B%C3%BCndnis-90Die-Gr%C3%BCnen-Brandenburg-an-der-Havel-201715346651520/
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
@@ -94,7 +94,7 @@ urls:
   - type: WEBSITE
     url: http://www.gruene-mol.de/startseite/
   - type: FACEBOOK
-    url: https://www.facebook.com/pages/B%C3%BCndnis-90-Die-Gr%C3%BCnen-M%C3%A4rkisch-Oderland/1409158162635160
+    url: https://www.facebook.com/gruenemol/
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
@@ -105,7 +105,7 @@ urls:
   - type: WEBSITE
     url: http://www.gruene-ohv.de/home/
   - type: FACEBOOK
-    url: https://www.facebook.com/gruene.kvohv?fref=ts
+    url: https://www.facebook.com/gruene.kvohv
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
@@ -140,7 +140,7 @@ urls:
   - type: WEBSITE
     url: http://gruene-potsdam.de/home/
   - type: FACEBOOK
-    url: https://www.facebook.com/gruenekvpotsdam/?fref=nf
+    url: https://www.facebook.com/gruenekvpotsdam/
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
@@ -184,4 +184,4 @@ urls:
   - type: WEBSITE
     url: http://www.gruene-um.de/home/
   - type: FACEBOOK
-    url: https://de-de.facebook.com/B%C3%BCndnis-90-Die-Gr%C3%BCnen-Uckermark-247133728649040/
+    url: https://www.facebook.com/B%C3%BCndnis-90-Die-Gr%C3%BCnen-Uckermark-247133728649040/
