--- a/data/countries/de/be/data.yaml
+++ b/data/countries/de/be/data.yaml
@@ -113,7 +113,7 @@ urls:
   - type: TWITTER
     url: https://twitter.com/fuchsgruen
   - type: FACEBOOK
-    url: https://de-de.facebook.com/gruene.reinickendorf
+    url: https://www.facebook.com/gruene.reinickendorf
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
