Validate entry uniqueness (#35)
* Add uniqueness check
* Add Makefile, simplify travis config
* Add validation for email and url uniqueness
* Make schema validation less verbose
* Data corrections

--- a/data/countries/de/he/data.yaml
+++ b/data/countries/de/he/data.yaml
@@ -6,7 +6,7 @@
 type: REGIONAL_CHAPTER
 level: DE:LANDESVERBAND
 country: DE
-state: Nordrhein-Westfalen
+state: Hessen
 urls:
   - type: WEBSITE
     url: http://www.gruene-hessen.de/
