--- a/data/countries/de/nw/data.yaml
+++ b/data/countries/de/nw/data.yaml
@@ -646,7 +646,7 @@ urls:
 country: DE
 district: Rhein-Kreis-Neuss
 emails:
-  - address: lisa.anschuetz@t-online.de
+  - address: verband@gruene-rkn.de
 level: DE:KREISVERBAND
 state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
