--- a/data/countries/de/st/data.yaml
+++ b/data/countries/de/st/data.yaml
@@ -32,7 +32,7 @@ urls:
   - type: TWITTER
     url: https://twitter.com/AltmarkGruene
 emails:
-  - address: christian.franke@gruene.de
+  - address: ruben.engel@gruene-altmark.de
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
