--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,7 @@ notifications:
   email: false
 
 install:
-  - pip install yamllint pykwalify
+  - make venv
 
 script:
-  - yamllint --help
-  - "yamllint -d \"{extends: default, rules: {line-length: {max: 120}}}\" ./data"
-  - yamllint ./validate/schema.yaml
-  - python ./validate/validate.py
+  - make validate
